--- a/project-galactico/galacticostyle/style.css
+++ b/project-galactico/galacticostyle/style.css
@@ -35,6 +35,14 @@
     margin: 0px;
     padding: 0px;
 }
+
 body{
+    background-color: var(--color02);
+    min-width: 350px;
     background-image: url('/image/galacticofoto.jpg');
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
 }
