Update my style

--- a/project-galactico/galacticostyle/aboutstyle.css
+++ b/project-galactico/galacticostyle/aboutstyle.css
@@ -1,4 +1,3 @@
-
 @charset "UTF-8";
 
 
@@ -40,50 +39,7 @@
     margin: 0px;
     padding: 0px;
 }
-
 body{
-    height: 100vh;
-    background-color: var(--color02);
-    background-image: url('/image/galacticofoto.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center bottom;
+    background-image: linear-gradient(to top, var(--color01), var(--color03));
     background-attachment: fixed;
-    font-family: 'Courier New', Courier, monospace;
-}
-header{
-    background-image: linear-gradient(to top, var(--color00), var(--color03), var(--color05));
-    height: 180px;
-    background-attachment: fixed;
-    box-shadow: 4px 3px 10px 2px #0000008e;  
-}
-header h1{
-    padding-top: 40px;
-    text-align: center;
-    font-family: var(--font-title01);
-    font-size: 2.5em;
-    color: var(--color00);
-}
-
-ul li > a{
-    display: inline-block;
-    list-style-type: none;
-    padding: 10px;
-    text-decoration: none;
-    font-size: 1.5em;
-    font-weight: bold;
-    color: white;
-}
-ul li > a:hover{
-    background-color: var(--color02);
-    border-radius: 5px;
-    transition-duration: 0.5s;
-
-    
-    
-}
-nav ul>li{
-    display: inline;
-    margin: 2px;
-    
 }
