--- a/project-galactico/galacticostyle/aboutstyle.css
+++ b/project-galactico/galacticostyle/aboutstyle.css
@@ -40,6 +40,24 @@
     padding: 0px;
 }
 body{
-    background-image: linear-gradient(to top, var(--color01), var(--color03));
+    background-image: linear-gradient(to top, var(--color06), var(--color05));
     background-attachment: fixed;
+}
+header{
+    padding: 30px;
+    text-align: center;
+}
+header h1{
+    font-family: var(--font-title00);
+    font-weight: normal;
+    border-top: 4px solid var(--color01); 
+    border-bottom: 4px solid var(--color00); ;
+    padding: 10px;
+    background-color: var(--color07);
+    font-size: 2.5em;
+    border-radius: 10px;
+}
+main{
+    background-color: white;
+    
 }
