--- a/project-galactico/galacticostyle/aboutstyle.css
+++ b/project-galactico/galacticostyle/aboutstyle.css
@@ -56,8 +56,47 @@ header h1{
     background-color: var(--color07);
     font-size: 2.5em;
     border-radius: 10px;
+    font-variant: small-caps;
 }
 main{
     background-color: white;
+    text-indent: 2%;
     
+}
+/* Set all paragraphy*/
+.paragraphy p{
+    line-height: 2em;
+    font-size: 1.2em;
+    
+    
+}
+#largelatter::first-letter{
+    font-size: 2em;
+}
+
+section{
+    padding: 20px;
+}
+section h2{
+    text-align: center;
+}
+section aside > ul{
+    list-style-type: none;
+    list-style-position:inside;
+
+
+}
+aside{
+    text-align: center;
+}
+article{
+    padding: 20px;
+    border: 4px solid var(--color05);
+    border-radius: 10px;
+    box-shadow: 0px 1px 2px 2px #00000047;
+
+}
+ul li{
+    padding-top: 2px;
+    text-align: none;
 }
