--- a/project-galactico/galacticostyle/aboutstyle.css
+++ b/project-galactico/galacticostyle/aboutstyle.css
@@ -21,6 +21,7 @@
     --font-title00: 'Keania One', cursive;
     --font-title01: 'Kumar One', cursive;
     --font-paraphy: 'Bebas Neue', cursive;
+    --font-body: Arial, Helvetica, sans-serif;
    
     /*The color for  my site*/
    
@@ -42,6 +43,7 @@
 body{
     background-image: linear-gradient(to top, var(--color06), var(--color05));
     background-attachment: fixed;
+    font-family: var(--font-body)
 }
 header{
     padding: 30px;
@@ -65,7 +67,7 @@ main{
 }
 /* Set all paragraphy*/
 .paragraphy p{
-    line-height: 2em;
+    line-height: 1.5em;
     font-size: 1.2em;
     
     
@@ -91,11 +93,23 @@ aside{
 }
 article{
     padding: 20px;
-    border: 4px solid var(--color05);
+    border: 2px solid var(--color05);
     border-radius: 10px;
     box-shadow: 0px 1px 2px 2px #00000047;
+    margin-left: 10px;
+    margin-right: 10px;
 
 }
+#back{
+    padding: 10px;
+   
+}
+/*Onganize de image of back page*/
+#back > a{
+    display: block;
+    text-align: center;
+}
+
 ul li{
     padding-top: 2px;
     text-align: none;
