--- a/project-galactico/galacticostyle/aboutstyle.css
+++ b/project-galactico/galacticostyle/aboutstyle.css
@@ -45,10 +45,12 @@ body{
     background-attachment: fixed;
     font-family: var(--font-body)
 }
+/*Set the header*/
 header{
     padding: 30px;
     text-align: center;
 }
+/*Set the header 1*/
 header h1{
     font-family: var(--font-title00);
     font-weight: normal;
@@ -69,18 +71,18 @@ main{
 .paragraphy p{
     line-height: 1.5em;
     font-size: 1.2em;
-    
-    
 }
-#largelatter::first-letter{
-    font-size: 2em;
-}
+    
 
 section{
     padding: 20px;
 }
 section h2{
     text-align: center;
+    font-variant: small-caps;
+    font-family: var(--font-subtitle);
+    padding-bottom: 10px;
+    
 }
 section aside > ul{
     list-style-type: none;
@@ -90,6 +92,11 @@ section aside > ul{
 }
 aside{
     text-align: center;
+}
+aside h2{
+    font-variant: small-caps;
+    padding-top: 10px;
+    font-family: var(--font-subtitle);
 }
 article{
     padding: 20px;
