--- a/project-galactico/galacticostyle/membersstyle.css
+++ b/project-galactico/galacticostyle/membersstyle.css
@@ -50,7 +50,7 @@ header{
     padding: 30px;
     text-align: center;
 }
-/*Set the header */
+/*Set the h1 */
 header h1{
     font-family: var(--font-title00);
     font-weight: normal;
@@ -61,6 +61,7 @@ header h1{
     font-size: 2.5em;
     border-radius: 10px;
     font-variant: small-caps;
+    
 }
 main{
     background-color: white;
