--- a/project-galactico/galacticostyle/style.css
+++ b/project-galactico/galacticostyle/style.css
@@ -43,7 +43,7 @@
 }
 
 body{
-    height: 100vh;
+    min-height: 100vh;
     background-color: var(--color02);
     background-image: url('/image/galacticofoto.jpg');
     background-repeat: no-repeat;
