--- a/project-galactico/galacticostyle/style.css
+++ b/project-galactico/galacticostyle/style.css
@@ -73,21 +73,56 @@ header h1{
     
 }
 
-ul li > a{
-    display: inline-block;
-    list-style-type: none;
-    padding: 6px;
-    text-decoration: none;
+/*Style my btn dropdown*/
+#dropdownbtn{
+    background-color: var(--color03);
     font-size: 1.3em;
+    border: none;
+    padding: 6px;
+    cursor: pointer;
     color: white;
     font-family: var(--font-title01);
+    width: 100%;
+    
 }
-ul li > a:hover{
-    background-color: var(--color02);
-    border-radius: 5px;
-    transition-duration: 0.5s;
-} 
-nav ul > li{
-    display: inline;
-    margin: 2px;
+/*The Container section need position*/
+#dropdown{
+    display: inline-block;
+    position: relative;
+    
+
+}
+/*Dropdown Content hide*/
+#dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: var(--color06);
+    min-width: 160px;
+    z-index: 1;
+    box-shadow: 2px 3px 2px 2px rgba(0, 0, 0, 0.61);
+    font-family: var(--font-title01);
+    overflow: hidden;
+}
+/* List and link inside of dropdown-content*/
+#dropdown-content a{
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    color: #000000;
+    
+}
+/*Show dropdown menu on hover*/
+#dropdown #dropdown-content{
+    display: block;
+}
+#dropdown-content a:hover{
+    background-color: white;
+    
+}
+#dropdown:hover #dropdownbtn{
+    background-color: var(--color01);
+
+}
+#dropdownbtn {
+    overflow: hidden;
 }
