--- a/project-galactico/galacticostyle/style.css
+++ b/project-galactico/galacticostyle/style.css
@@ -82,8 +82,6 @@ header h1{
     cursor: pointer;
     color: white;
     font-family: var(--font-title01);
-    width: 100%;
-    
 }
 /*The Container section need position*/
 #dropdown{
@@ -96,12 +94,11 @@ header h1{
 #dropdown-content {
     display: none;
     position: absolute;
-    background-color: var(--color06);
-    min-width: 160px;
+    background-color: var(--color05);
+    min-width: 100px;
     z-index: 1;
     box-shadow: 2px 3px 2px 2px rgba(0, 0, 0, 0.61);
     font-family: var(--font-title01);
-    overflow: hidden;
 }
 /* List and link inside of dropdown-content*/
 #dropdown-content a{
@@ -109,10 +106,10 @@ header h1{
     text-decoration: none;
     display: block;
     color: #000000;
-    
+    transition: 0.4s;
 }
 /*Show dropdown menu on hover*/
-#dropdown #dropdown-content{
+#dropdown:hover #dropdown-content{
     display: block;
 }
 #dropdown-content a:hover{
@@ -124,5 +121,5 @@ header h1{
 
 }
 #dropdownbtn {
-    overflow: hidden;
+    overflow: auto;
 }
