--- a/project-galactico/galacticostyle/style.css
+++ b/project-galactico/galacticostyle/style.css
@@ -85,7 +85,7 @@ header h1{
     margin-left: 10px;
     margin-top: 32px;
     border-radius: 4px;
-    transition: 0.4s;
+    
 }
 /*The Container section need position*/
 #dropdown{
@@ -101,7 +101,7 @@ header h1{
     background-color: var(--color05);
     min-width: 100px;
     z-index: 1;
-    box-shadow: 2px 3px 2px 2px rgba(0, 0, 0, 0.61);
+    box-shadow: 2px 3px 2px 2px #0000009c;
     font-family: var(--font-title01);
     margin-left: 10px;
 }
@@ -125,5 +125,9 @@ header h1{
 #dropdown:hover #dropdown-btn{
     background-color: var(--color01);
 
+}
+#dropdown-btn:hover{
+    transform: translate(2px, 2px);
+    transition: 0.4s;
 }
 
