--- a/project-galactico/galacticostyle/style.css
+++ b/project-galactico/galacticostyle/style.css
@@ -65,12 +65,15 @@ header h1{
     padding-top: 40px;
     text-align: center;
     font-family: var(--font-title00);
-    font-size: 2.9em;
+    font-size: 3em;
     color: white;
     font-weight: normal;
     
 
     
+}
+header h1:hover{
+    color: var(--color00);
 }
 
 /*Style my btn dropdown*/
@@ -85,7 +88,6 @@ header h1{
     margin-left: 10px;
     margin-top: 32px;
     border-radius: 4px;
-    
 }
 /*The Container section need position*/
 #dropdown{
@@ -104,6 +106,7 @@ header h1{
     box-shadow: 2px 3px 2px 2px #0000009c;
     font-family: var(--font-title01);
     margin-left: 10px;
+    border-radius: 5px;
 }
 /* List and link inside of dropdown-content*/
 #dropdown-content a{
