--- a/project-galactico/menu/small-devices.css
+++ b/project-galactico/menu/small-devices.css
@@ -39,7 +39,7 @@
     padding: 0px;
 }
 
-html,body{
+body{
     min-height: 100vh;
     background-color: var(--color02);
     background-image: url(/image/galacticofoto.jpg);
