--- a/project-galactico/menu/small-devices.css
+++ b/project-galactico/menu/small-devices.css
@@ -42,13 +42,12 @@
 body{
     min-height: 100vh;
     background-color: var(--color02);
-    background-image: url('/image/galacticofoto.jpg');
+    background-image: url(/image/galacticofoto.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center bottom;
+    background-position: left center;
     background-attachment: fixed;
     font-family: var(--font-body);
-    display: flexbox;
 }
 /*Set the header*/
 header{
