--- a/project-galactico/menu/small-devices.css
+++ b/project-galactico/menu/small-devices.css
@@ -45,7 +45,7 @@ body{
     background-image: url(/image/galacticofoto.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: left center;
+    background-position:center;
     background-attachment: fixed;
     font-family: var(--font-body);
 }
