--- a/menu/small-devices.css
+++ b/menu/small-devices.css
@@ -41,7 +41,7 @@
 
 body{
     min-height: 100vh;
-    background: var(--color02) url('/image/galacticofoto.jpg');
+    background: var(--color02) url(/image/galacticofoto.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position:center;
