--- a/menu/small-devices.css
+++ b/menu/small-devices.css
@@ -41,6 +41,7 @@
 
 body{
     min-height: 100vh;
+    width: 100vh;
     background: var(--color02) url(/image/galactico-foto.jpg);
     background-repeat: no-repeat;
     background-size: cover;
