--- a/menu/small-devices.css
+++ b/menu/small-devices.css
@@ -42,7 +42,7 @@
 body{
     height: 100vh;
     width: 100vw;
-    background: var(--color02) url(/image/galactico-foto.jpg);
+    background: var(--color02) url('/image/galactico-foto.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: left  bottom;
