--- a/menu/medium-large-devices.css
+++ b/menu/medium-large-devices.css
@@ -15,7 +15,7 @@
 /*Screen for medium devices*/
 @media screen and (min-width: 768px) and (max-width: 992px) {
 body{
-    background-image: url(/image/landscape-fc.jpg);
+    background-image: url(../image/landscape-fc.jpg);
     background-position: center center;
 }
 nav > menu{
@@ -56,7 +56,7 @@ span#mobile{
 /*Screen for large*/
 @media screen and (min-width: 992px){
     body{
-        background-image: url(/image/galacticofoto.jpg);
+        background-image: url(../image/galacticofoto.jpg);
         background-position: center;
     }
     section > nav > menu > ul > li{
