--- a/about/small-devices.css
+++ b/about/small-devices.css
@@ -41,6 +41,8 @@
     padding: 0px;
 }
 body{
+    width: 100vw;
+    height: 100vh;
     background-image: linear-gradient(to top, var(--color06), var(--color05));
     background-attachment: fixed;
     font-family: var(--font-body)
@@ -105,6 +107,8 @@ article{
     box-shadow: 0px 1px 2px 2px #00000047;
     margin-left: 10px;
     margin-right: 10px;
+    transition: width 1s;
+    transition-timing-function: ease;
 
 }
 /*Onganize de image of back page*/
