--- a/about/medium-large-devices.css
+++ b/about/medium-large-devices.css
@@ -3,7 +3,7 @@
 /*Media Query for tablet*/
 @media screen and (min-width: 768px) and (max-width: 992px){
     .paragraphy{
-        width: 80vw;
+        width: 650px;
         margin: auto;
     }
      
