--- a/menu/small-devices.css
+++ b/menu/small-devices.css
@@ -53,7 +53,7 @@ body{
 /*Set the header*/
 header{
     background-image: linear-gradient(to top, var(--color00), var(--color03), var(--color05));
-    height: 162px;
+    height: 168px;
     background-attachment: fixed;
     box-shadow: 4px 3px 10px 2px #0000008e;
     transition: width 1s, height 1s; 
@@ -97,6 +97,8 @@ span#mobile{
     color: white;
     text-align: center;
     cursor: pointer;
+    font-size: 1.8em;
+    font-weight: bold;
 }
 span#mobile:hover{
     background-color: #000000a9;
