--- a/gallary/galarrystyle.css
+++ b/gallary/galarrystyle.css
@@ -71,6 +71,7 @@ header h1{
 }
 div.photos{
     border: 1px solid #ccc;
+    background-color: white;
 }
 div.photos:hover{
     border: 1px solid var(--color00);
@@ -78,4 +79,23 @@ div.photos:hover{
 div.photos img{
     width: 100%;
     height: auto;
+}
+p.description{
+    padding: 15px;
+    text-align: center;
+}
+*{
+    box-sizing: border-box;
+}
+section#galarry{
+    padding: 0px 10px;
+    float: left;
+    width: 90.99999%;
+    margin: 8px 0px;
+    width: 100%;
+}
+div.responsive:after{
+    content: "";
+    display: table;
+    clear:both;
 }
