add photo to my galarry

--- a/gallary/galarrystyle.css
+++ b/gallary/galarrystyle.css
@@ -86,6 +86,7 @@ div.photos{
     box-shadow: 0px 0px 5px 4px #00000080;
     margin: 20px 0px;
     border-radius: 5px;
+    transition-delay: 1s;
 }
 div.photos:hover{
     border: 2px solid var(--color00);
