--- a/about/small-devices.css
+++ b/about/small-devices.css
@@ -68,9 +68,9 @@ main{
     background-color: white;
     text-indent: 2%;
     display: flex;
-    flex-flow:column;
-    justify-content:center;
+    flex-flow:column wrap;
     align-items:center;
+    justify-content: center;
    
    
     
@@ -111,11 +111,6 @@ article.paragraphy{
     border: 2px solid var(--color05);
     border-radius: 10px;
     box-shadow: 0px 1px 2px 2px #00000047;
-    
-    
-   
-   
-
 }
 /*Onganize de image of back page*/
 #back{
