--- a/gallary/galarrystyle.css
+++ b/gallary/galarrystyle.css
@@ -130,7 +130,7 @@ p.description{
     div.photos{
         flex: 50%;
         max-width: 30%;
-        flex-grow: 3;
+        flex-shrink: 2;
         flex-basis: 250px;
     }
    
