--- a/gallary/galarrystyle.css
+++ b/gallary/galarrystyle.css
@@ -129,8 +129,8 @@ p.description{
     }
     div.photos{
         flex: 50%;
-        max-width: 30%;
-        flex-basis: 250px;
+        max-width: 48%;
+        
     }
    
 }
@@ -143,7 +143,9 @@ p.description{
     }
     div.photos{
         flex: 50%;
-        max-width: 40%;
+        max-width: 20%;
+        margin: 5px;
+       
        
         
     }
